--- a/securitydemo1/src/main/resources/static/login.html
+++ b/securitydemo1/src/main/resources/static/login.html
@@ -11,6 +11,8 @@
         密码：<input type="text" name="password" />
         <br/>
         <input type="submit" value="login">
+        <br/>
+        <input type="checkbox" name="remember-me" />自动登录
     </form>
 </body>
 </html>
